<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/feedback_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/feedback_button_back"
        android:layout_width="@dimen/round_button_size"
        android:layout_height="@dimen/round_button_size"
        android:layout_marginStart="@dimen/dimens_16_dp"
        android:background="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_toolbar"
        app:layout_constraintStart_toStartOf="@+id/feedback_toolbar"
        app:layout_constraintTop_toTopOf="@+id/feedback_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimens_24_dp"
        app:layout_constraintBottom_toTopOf="@+id/button_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_toolbar">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_16_dp"
                    android:layout_marginTop="@dimen/dimens_32_dp"
                    android:gravity="center"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/feedback_toolbar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimens_16_dp"
                    android:layout_marginTop="@dimen/dimens_12_dp"
                    android:layout_marginBottom="@dimen/dimens_4_dp"
                    android:paddingStart="@dimen/dimens_4_dp"
                    android:text="@string/e_mail"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimens_16_dp"
                    android:ems="10"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/medium_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <View
                    android:id="@+id/errorReportDivider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="@dimen/dimens_16_dp"
                    android:layout_marginTop="@dimen/dimens_4_dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <LinearLayout
                    android:id="@+id/errorReportMessageField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/feedback_message_field_height"
                    android:layout_marginHorizontal="@dimen/dimens_16_dp"
                    android:layout_marginTop="@dimen/dimens_16_dp"
                    android:background="@drawable/bg_field_border"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dimens_16_dp"
                    app:layout_constraintTop_toBottomOf="@+id/errorReportDivider">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/errorReportMessageFieldTitleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimens_4_dp"
                        android:text="@string/describe_the_problem"
                        android:textColor="@color/gray_500"
                        android:textSize="@dimen/small_text_size" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/errorInputBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/dimens_16_dp"
                        android:background="@android:color/transparent"
                        android:gravity="start"
                        android:lineSpacingExtra="@dimen/dimens_8_dp"
                        android:textSize="@dimen/medium_text_size"
                        tools:text="Не могу войти в приложение. \n Постоянно выскакивает окно с ошибкой." />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/dimens_16_dp"
        android:layout_marginBottom="@dimen/dimens_24_dp"
        android:background="@drawable/button_state_background"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>